[gd_scene load_steps=6 format=3 uid="uid://dnhoq4wsxee6u"]

[ext_resource type="Script" path="res://map/transission_texted/intro1.gd" id="1_kptis"]
[ext_resource type="Theme" uid="uid://b28w6ny6cu743" path="res://HUD/theme.tres" id="2_uqk7c"]
[ext_resource type="AudioStream" uid="uid://bgoyw4bigw7" path="res://assets/sounds/music/Action 4 (Loop).wav" id="3_lo5p0"]

[sub_resource type="Gradient" id="Gradient_2q7ei"]
offsets = PackedFloat32Array(0, 0.996063)
colors = PackedColorArray(0.0823529, 0.0823529, 0.0823529, 1, 0.0823529, 0.0823529, 0.0823529, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_q2ufv"]
gradient = SubResource("Gradient_2q7ei")

[node name="Intro1" type="Node2D"]
script = ExtResource("1_kptis")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_q2ufv")

[node name="Label" type="Label" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_uqk7c")
theme_override_font_sizes/font_size = 64
text = "In the depths of the shadows,
a forbidden power calls..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="CanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_uqk7c")
theme_override_font_sizes/font_size = 64
text = "A necromancer driven
by their unyielding hunger..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="CanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_uqk7c")
theme_override_font_sizes/font_size = 64
text = "To master the true power of decay,
one must walk the path of death..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="transition_timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_lo5p0")
autoplay = true
bus = &"Music"

[connection signal="timeout" from="transition_timer" to="." method="_on_transition_timer_timeout"]
